opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/archi"
bug-reports: "https://github.com/anmonteiro/archi/issues"
dev-repo: "git+https://github.com/anmonteiro/archi.git"
doc: "https://anmonteiro.github.io/archi/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {>= "1.0"}
  "hmap"
  "alcotest" {with-test}
]
synopsis:
  "A library for managing the lifecycle of stateful components in OCaml"
description:
"""
Archi is an OCaml library for managing the lifecycle of stateful components and
their dependencies.
"""
